modify varnish to permit locales on resticted urls

--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -26,7 +26,8 @@ sub vcl_recv {
     }
 
     # decide if request can look in cache
-    if (req.url ~ "^\/(admin|users|recruiter|dashboard|consultant(?!s)|job-search|api|sa\/|super_admins)" || req.url ~ ".*\/job.*apply\/?$"){
+    # bit at the beginning permits locales
+    if (req.url ~ "^\/([a-zA-Z\-]{0,5}\/)?(admin|users|recruiter|dashboard|consultant(?!s)|job-search|api|sa\/|super_admins)" || req.url ~ ".*\/job.*apply\/?$"){
         return(pass);
     } elsif (req.http.Cookie ~ "_user_logged_in") {
         return(pass);
