--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -118,6 +118,11 @@ sub vcl_backend_response {
     
 }
 
+sub vcl_backend_error {
+    include "error_page.vcl";
+    return (deliver);
+}
+
 sub vcl_deliver {
     if (!resp.http.Content-Type) {
         set resp.http.Content-Type = "text/html; charset=utf-8";
