--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -124,9 +124,9 @@ sub vcl_backend_error {
 }
 
 sub vcl_deliver {
-    if (!resp.http.Content-Type) {
-        set resp.http.Content-Type = "text/html; charset=utf-8";
-    }
+    # if (!resp.http.Content-Type) {
+    set resp.http.Content-Type = "text/html; charset=utf-8";
+    # }
     set resp.http.X-Varnish-Cache = req.http.X-Varnish-Cache;
     set resp.http.X-Varnish-Url = req.http.X-Varnish-Url;
     set resp.http.Cache-Control = "private, no-cache";
