--- a/varnish/templates/default/error_page.vcl.erb
+++ b/varnish/templates/default/error_page.vcl.erb
@@ -1,4 +1,4 @@
-synthetic({"<html> <head> <script> (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-376361-93', 'auto'); ga('set', 'dimension1', '"} + beresp.backend.name + {"'); ga('set', 'metric1', '"} + bereq.retries + {"'); ga('send', 'pageview'); </script> </head> <body></body> </html>"});
+synthetic({"<html> <head> <script> (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-376361-93', 'auto'); ga('set', 'dimension1', '"} + beresp.backend.name + {"'); ga('set', 'dimension2', '"} + bereq.retries + {"'); ga('send', 'pageview'); </script> </head> <body></body> </html>"});
 
 # "<html>
 # <head>
@@ -9,7 +9,7 @@ synthetic({"<html> <head> <script> (function(i,s,o,g,r,a,m){i['GoogleAnalyticsOb
 #   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 #   ga('create', 'UA-376361-93', 'auto');
 #   ga('set', 'dimension1', '"} + beresp.backend.name + {"');
-#   ga('set', 'metric1', '"} + bereq.retries + {"');
+#   ga('set', 'dimension2', '"} + bereq.retries + {"');
 #   ga('send', 'pageview');
 # </script>
 # </head>
