count retries, and retry when error and max retries not met

--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -116,10 +116,16 @@ sub vcl_backend_response {
     if (beresp.http.content-type ~ "text") {
         set beresp.do_gzip = true;
     }
+
+    set beresp.http.X-Varnish-Retries = bereq.retries;
     
 }
 
 sub vcl_backend_error {
+    if (bereq.retries < max_retries){
+        return (retry);
+    }
+
     include "error_page.vcl";
     return (deliver);
 }
