add CORS header to all assets

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -48,6 +48,7 @@ server {
 
       location ~* /(production|staging|assets|javascripts|chosen)/.*.(jpg|jpeg|png|gif|svg|ico|css|js)$ {
         expires 1y;
+        add_header Access-Control-Allow-Origin *;
         add_header Cache-Control "public";
         break;
       }
