--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -88,7 +88,7 @@ sub vcl_backend_response {
        return (retry);
     }
 
-    if (beresp.http.X-Do-Not-Cache == "true" || bereq.url ~ "^\/users\/auth\/[a-z_-]*\/callback" || bereq.http.X-Varnish-Cache == "pass" || beresp.http.Content-Type ~ "json" || beresp.http.Content-Type ~ "xml" || beresp.status == 429) {
+    if (beresp.http.X-Do-Not-Cache == "true" || bereq.url ~ "^\/users\/auth\/[a-z_-]*\/callback" || bereq.http.X-Varnish-Cache == "pass" || beresp.http.Content-Type ~ "json" || beresp.http.Content-Type ~ "xml" || beresp.status == 429 || beresp.status == 403) {
         set beresp.uncacheable = true;
     } else {
         unset beresp.http.Set-Cookie;
