--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -56,7 +56,10 @@ sub vcl_hit {
 
     # deliver for bots regardless of age
     if (req.http.User-Agent ~ "bot" || req.http.User-Agent ~ "Googlebot" || req.http.User-Agent ~ "bingbot") {
-        return (deliver_stale);
+        if (obj.ttl <= 0){
+            obj.ttl = 10;
+        }
+        return (deliver);
     }
 
 
