--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -56,8 +56,8 @@ sub vcl_hit {
 
     # deliver for bots regardless of age
     if (req.http.User-Agent ~ "bot" || req.http.User-Agent ~ "Googlebot" || req.http.User-Agent ~ "bingbot") {
-        if (obj.ttl <= 0){
-            obj.ttl = 10;
+        if (obj.ttl <= 0s){
+            obj.ttl = 10s;
         }
         return (deliver);
     }
