pass bots to a single backend server

--- a/varnish/templates/default/backends.vcl.erb
+++ b/varnish/templates/default/backends.vcl.erb
@@ -22,15 +22,18 @@ backend server<%= index + 1 %> {
 
 sub vcl_init {
     # set up each server for saintmode
-    <% [*1..server_count].each do |x| %>
+    <% [*1..server_count-1].each do |x| %>
     new sm<%= x %> = saintmode.saintmode(server<%= x %>, 10);
     <% end %>
     # add saintmoded backends to round_robin director
     new brr = directors.round_robin();
 
-    <% [*1..server_count].each do |x| %>
+    <% [*1..server_count-1].each do |x| %>
     brr.add_backend(sm<%= x %>.backend());
     <% end %>
+
+    new search_brr = directors.round_robin();
+    search_brr.add_backend(server<%= server_count %>);
 }
 
 
