--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -27,7 +27,7 @@ sub vcl_recv {
 
     # decide if request can look in cache
     # bit at the beginning permits locales
-    if ((req.url ~ "job-search" || req.url ~ "job") && (req.http.User-Agent ~ "bot" || req.http.User-Agent ~ "Googlebot" || req.http.User-Agent ~ "bingbot")) {
+    if ((req.url ~ "job-search" || req.url ~ "job") && (req.http.User-Agent ~ "bot" || req.http.User-Agent ~ "Googlebot" || req.http.User-Agent ~ "bingbot" || req.http.User-Agent ~ "spider")) {
         set req.backend_hint = search_brr.backend();
         unset req.http.Cookie;
         return(hash);
@@ -55,7 +55,7 @@ sub vcl_hit {
     }
 
     # deliver for bots regardless of age
-    if (req.http.User-Agent ~ "bot" || req.http.User-Agent ~ "Googlebot" || req.http.User-Agent ~ "bingbot") {
+    if (req.http.User-Agent ~ "bot" || req.http.User-Agent ~ "Googlebot" || req.http.User-Agent ~ "bingbot" || req.http.User-Agent ~ "spider") {
         return (deliver);
     }
 
