mark chosen backends in response for debugging

--- a/varnish/templates/default/custom.vcl.erb
+++ b/varnish/templates/default/custom.vcl.erb
@@ -4,8 +4,10 @@ sub vcl_recv {
     # send all requests to our backend round-robin (brr)
     if (req.http.host == "www.twentyrecruitment.com" || req.http.host == "www.barkerross.co.uk" || req.http.host == "www.careersincybersecurity.co.uk" || req.http.host == "www.montash.com" || req.http.host == "www.identifiautotech.com" || req.http.host == "www.lawrenceharvey.com" || req.http.host == "www.darwinrecruitment.com" || req.http.host == "www.jobcoconut.com" || req.http.host == "www.macgregorblack.com" || req.http.host == "careers.autorestore.co.uk" || req.http.host == "www.cmcconsulting.co.uk" || req.http.host == "www.huntercharles.de" || req.http.host == "www.hshcr.com" || req.http.host == "www.montashreviews.com" || req.http.host == "www.hero.ie" || req.http.host == "www.hrdigitaltoday.com" || req.http.host == "www.4healthcare.co.uk" || req.http.host == "www.propelexecutive.com" || req.http.host == "www.astutetechnical.co.uk" || req.http.host == "www.careertrotter.de" || req.http.host == "www.meridianbs.co.uk" || req.http.host == "www.achievegroup.com.my" || req.http.host == "www.achievegroup.com.hk" || req.http.host == "www.achievegroup.asia" || req.http.host == "www.sammons.co.uk" || req.http.host == "www.venquis.de" || req.http.host == "www.channelpeople.co.uk" || req.http.host == "www.fleximums.com" || req.http.host == "www.talentfm.co.uk" || req.http.host == "www.monarchdigital.co.uk" || req.http.host == "www.therecruitmentsolution.co.uk" || req.http.host == "www.nativegravity.co.uk" || req.http.host == "www.lawrenceharvey.com"){
         set req.backend_hint = brr.backend();
+        set ret.http.X-High-Performance = "false";
     } else {
         set req.backend_hint = hp_brr.backend();
+        set ret.http.X-High-Performance = "true";
     }
 
     # store requested url for returning later
@@ -160,6 +162,7 @@ sub vcl_deliver {
     set resp.http.X-Varnish-Url = req.http.X-Varnish-Url;
     set resp.http.Cache-Control = "private, no-cache";
     set resp.http.X-CF-Passed-Proto = req.http.CloudFront-Forwarded-Proto;
+    set resp.http.X-High-Performance = req.http.X-High-Performance;
     unset resp.http.X-Powered-By;
     unset resp.http.Server;
 }
