show forwarded proto

--- a/varnish/templates/default/custom_cerberus.vcl.erb
+++ b/varnish/templates/default/custom_cerberus.vcl.erb
@@ -167,6 +167,7 @@ sub vcl_deliver {
     set resp.http.X-CF-Passed-Proto = req.http.CloudFront-Forwarded-Proto;
     set resp.http.X-High-Performance = req.http.X-High-Performance;
     set resp.http.X-Cerberus = "true";
+    set resp.http.X-Forwarded-Proto = req.http.X-Forwarded-Proto;
     unset resp.http.X-Powered-By;
     unset resp.http.Server;
 }
