--- a/varnish/templates/default/custom_cerberus.vcl.erb
+++ b/varnish/templates/default/custom_cerberus.vcl.erb
@@ -16,7 +16,7 @@ sub vcl_recv {
     # store requested url for returning later
     set req.http.X-Varnish-Url = req.url;
 
-    set req.http.X-Forwarded-Proto = req.http.CloudFront-Forwarded-Proto;
+    # set req.http.X-Forwarded-Proto = req.http.CloudFront-Forwarded-Proto;
 
     if (req.method == "BAN") {
         ban("req.http.host == " + req.http.host);
